--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -3,6 +3,10 @@
     border-bottom: solid 1px #ccc;
 }
 
+#page-content {
+    overflow-x: hidden;
+}
+
 .change-password-title,
 .profile-title,
 .login-title {
